= Changelog
:toc: auto

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== [Unreleased]

== [1.1.2] - 2023-09-15

- Include Jakarta Data TCK Runner for Eclipse JNoSQL;

== [1.1.1] - 2023-05-25

=== Added

- Include static metamodel
- Upgrade API to Jakarta Data 1.0.0-RC1
- Include support to default method at JNoSQL Lite
- Include support to Find annotation at JNoSQL Lite
- Include support to pagination offset and Cursor at JNoSQL Lite

=== Removed

- Remove the metadata extension

== [1.1.0] - 2023-02-05

=== Added

- Upgrade API to Jakarta Data 1.0.0-M2
- Include Jakarta Data annotations operations (Insert, Update, Delete, Save) to JNoSQL lite

== [1.0.4] - 2023-12-20

== [1.0.3] - 2023-12-02

=== Fixed

- deleteAll does not delete anything in the generated repository implementation classes

== [1.0.2] - 2023-10-01

=== Added

- Add support to CDI Lite as extension

== [1.0.1] - 2023-7-31

== [1.0.0] - 2023-6-22

=== Added

- Added the JNoSQL Bean Validation  module

=== Removed

- Remove databases modules and move to JNoSQL databases.

== [1.0.0-b6] - 2023-03-11

=== Changed

- Update Jakarta API to after the Big-bang
- CriteriaDocumentTemplate and CriteriaDocumentTemplateProducer for Criteria API support
- Update test API to use Weld-Jupiter

=== Added

- Add support for Jakarta Data

=== Removed

- Remove the old Jakarta NoSQL repositories features
- Remove TCK dependency

== [1.0.0-b5] - 2022-12-22

=== Added

- Create a CHANGELOG file to track the specification evolution
- Add Eclipse Microprofile Config

=== Changed

- Move the default documentation to ASCIIDOC
- Replace Hamcrest by AssertJ
- Define bean discovery to annotated instead of all

== [1.0.0-b4] - 2022-06-04

=== Added

- Add MongoDB specific version

== [1.0.0-b3] - 2021-03-01

=== Changed
